force-app/main/default/objects/Terminal__c/Terminal__c.object-meta.xml
<CustomObject>
    <label>Terminal</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Terminal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terminals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>