force-app/main/default/objects/Terminal__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location*</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Terminals</relationshipLabel>
    <relationshipName>Terminals</relationshipName>
    <type>Lookup</type>
</CustomField>