force-app/main/default/objects/Terminal__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Merchant__c</referenceTo>
    <relationshipLabel>Terminals</relationshipLabel>
    <relationshipName>Terminals</relationshipName>
    <type>Lookup</type>
</CustomField>